--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,4 @@
 <p>admin works!</p>
 
     <button (click)="onImprimir()">imprimir</button>
+    <button (click)="onImprimirContactenos()">reporte contactenos</button>
