--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,158 @@
-<p>home works!</p>
+<div class="container justify-content-center shadow-lg">
+
+
+    <mat-grid-list cols="4" rowHeight="100px">
+      <mat-grid-tile class="pf3" colspan="4" rowspan="5">
+  
+        <img src="https://images.eyeglasses.com/site/homepage/8-5-22/hero-animation.gif" width="100%" height="100%"
+          alt="">
+  
+      </mat-grid-tile>
+      <!-- 
+  // Segundas cosas  -->
+  
+      <mat-grid-tile colspan="4" rowspan="1" style="background-color: rgb(255, 255, 255);">
+  
+        <button style="width:200px; height: 50px; " type="button" class="btn btn-primary"> <a routerLink="" style="color: white; text-decoration: none;">Realiza tu examen</a></button>
+  
+  
+      </mat-grid-tile>
+  
+      <mat-grid-tile colspan="1" rowspan="2" style="background-color: rgb(148, 148, 148);">
+        <img src="https://gmo.com.ec/media/wysiwyg/Banner-promo-EC.png?rand=1663879857" alt="" width="100%" height="100%">
+      </mat-grid-tile>
+      <mat-grid-tile colspan="1" rowspan="2" style="background-color: rgb(148, 148, 148);">
+        <img src="https://gmo.com.ec/media/wysiwyg/15_suscripcion_18-02.jpg" alt="" width="100%" height="100%">
+      </mat-grid-tile>
+      <mat-grid-tile colspan="1" rowspan="2" style="background-color: rgb(148, 148, 148);">
+        <img src="https://gmo.com.ec/media/wysiwyg/Banner-promo-GMO.png?rand=1662410647" alt="" width="100%"
+          height="100%">
+      </mat-grid-tile>
+      <mat-grid-tile colspan="1" rowspan="2" style="background-color: rgb(255, 255, 255);">
+        <img src="https://gmo.com.ec/media/wysiwyg/GMO_Combinacion-Perfecta_052022_promo.png" alt="" width="100%"
+          height="100%">
+      </mat-grid-tile>
+  
+   
+  
+      <mat-grid-tile colspan="1" rowspan="6" style="background-color: rgb(255, 255, 255);">
+        <h1 style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 40px;">¡Por la compra de un par de lentes, te llevas uno gratis!</h1>
+  
+      </mat-grid-tile>
+  
+      <mat-grid-tile colspan="2" rowspan="6" style="background-color: rgb(255, 255, 255); ">
+        <img
+          src="https://images.prismic.io/bn-ca/c64bc8c6-86b2-4dd1-8065-dc9c523b7021_2pair.jpg?ixlib=gatsbyFP&auto=compress%2Cformat&fit=max"
+          width="80%" height="60%" alt="">
+  
+         
+      </mat-grid-tile>
+  
+      <mat-grid-tile colspan="1" rowspan="6" style="background-color: rgb(255, 255, 255);">
+        <h1 style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration:double ; font-size: 40px; margin: 10px;">Oferta limitada hasta el 25 de diciembre para todas las ciudades de Colombia</h1>
+      </mat-grid-tile>
+  
+  
+      <mat-grid-tile colspan="1" rowspan="4" style="background-color: rgb(255, 255, 255);">
+        <div class="row container ">
+          <h1 style="margin: 2px; margin-top: -20px; color: rgb(7, 9, 11);  text-align: center; font-family: 'Quicksand', sans-serif;  border: 1px solid;
+          padding: 1px;
+          box-shadow: 5px 5px #e6e6e6;">Ubicación de nuestra tienda:
+            <p style="margin-top:20px ;">Cra. 13 #54-55, Bogotá</p>
+            <br>
+  
+            <h1 style="margin: 0px; color: rgb(7, 9, 11); font-family: 'Quicksand', sans-serif; ">Número de contacto:
+              <p style="margin-top: 20PX ;">3006946059</p>
+            </h1>
+          </h1>
+        </div>
+      </mat-grid-tile>
+  
+      <mat-grid-tile colspan="3" rowspan="4" style="background-color: rgb(255, 255, 255);">
+        <img
+          src="https://images.prismic.io/bn-ca/22808572-585a-4216-8233-33edd09023e4_Square_One_HP.jpg?ixlib=react-9.5.4&auto=format&fit=max&w=822"
+          width="100%" height="100%" alt="">
+      </mat-grid-tile>
+      <mat-grid-tile colspan="1" rowspan="4" style="background-color: rgb(255, 255, 255); ">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.7313830556104!2d-74.06719788573693!3d4.6419329434580465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9a39fdcbb20f%3A0x106bb80d484b5d24!2sCra.%2013%20%2354-55%2C%20Localidad%20de%20Chapinero%2C%20Bogot%C3%A1!5e0!3m2!1ses!2sco!4v1669937427641!5m2!1ses!2sco"
+          width="100%" height="95%" style="border:0; margin: 10px; " allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </mat-grid-tile>
+      <mat-grid-tile colspan="1" rowspan="4" style="background-color: rgb(255, 255, 255); ">
+        <img
+          src="https://images.prismic.io/bn-ca/f93ab263-e8a2-4b7c-b3d3-259d846e95d2_Eyeexams.jpg?ixlib=react-9.5.4&auto=format&fit=max&w=548"
+          style="margin: 2px;" width="100%" height="100%" alt="">
+      </mat-grid-tile>
+  
+      <mat-grid-tile colspan="1" rowspan="4" style="background-color: rgb(148, 148, 148); ">
+        <img
+          src="https://images.prismic.io/bn-ca/da524a02-35fc-4db0-8b93-08328145cbf2_Optom%20Room.jpg?ixlib=react-9.5.4&auto=format&fit=max&w=548"
+          style="margin: 2px;" width="100%" height="100%" alt="">
+      </mat-grid-tile>
+  
+      <mat-grid-tile colspan="1" rowspan="4" style="background-color: rgb(148, 148, 148); ">
+        <img
+          src="https://images.prismic.io/bn-ca/1b03c1e1-9f8d-42a3-ad7d-729666d040b3_FrameDisplay_1.jpg?ixlib=react-9.5.4&auto=format&fit=max&w=548"
+          style="margin: 2px;" width="100%" height="100%" alt="">
+      </mat-grid-tile>
+      <mat-grid-tile colspan="4" rowspan="2" style="background-color: rgb(244, 244, 244); ">
+  
+  
+        <mat-list role="list">
+          <mat-list-item role="listitem">
+            <div class="imagenes">
+              <div class="imagen">
+                <img src="https://images.eyeglasses.com/site/homepage/replacement_lenses.png" alt="complete product icon"
+                  width="100px">
+              </div>
+  
+              <div class=" texto">
+                <h5
+                  style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 20px;">
+                  Producto completo</h5>
+                <div class="m-3 texto-parrafo">
+                  <div>
+                    <p>Envia la montura de tu preferencia, y en ella instalaremos el lente de tu gusto</p>
+                  </div>
+                </div>
+              </div>
+  
+            </div>
+          </mat-list-item>
+  
+        </mat-list>
+  
+  
+  
+  
+        <mat-list role="list">
+          <mat-list-item role="listitem">
+            <div class="imagenes">
+              <div class="imagen">
+                <img
+                  src="https://bn-ca.cdn.prismic.io/bn-ca/7d666a8e-ce94-4bfe-a607-d5cda5c10a42_BN__Returns%2001.svg?ixlib=gatsbyFP&auto=compress%2Cformat&fit=max"
+                  alt="complete product icon" width="80px">
+              </div>
+  
+              <div class="mt-3 texto">
+                <h5
+                  style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 20px;">
+                  Envios a toda Colombia</h5>
+                <div class="texto-parrafo">
+                  <div>
+                    <p>Enviamos productos a toda parte de Colombia de forma gratuita y ofrecemos devoluciones con
+                      cualquier empresa de envio de una forma gratuita, si no esta conforme.</p>
+                  </div>
+                </div>
+              </div>
+  
+            </div>
+          </mat-list-item>
+  
+        </mat-list>
+  
+      </mat-grid-tile>
+  
+    </mat-grid-list>
+  </div>
