--- a/src/app/layouts/components/footer/footer.component.html
+++ b/src/app/layouts/components/footer/footer.component.html
@@ -1,1 +1,22 @@
-<p>footer works!</p>
+
+<footer class="bg-dark text-center text-white ">
+    <div class=" p-4 pb-0">
+      <section class="mb-4">
+  
+  
+        <a class="btn btn-outline-light btn-floating m-1" routerLink=""  role="button"
+          >Ubicación</a>
+  
+        <a class="btn btn-outline-light btn-floating m-1" routerLink=""  role="button"
+          >Información</a>
+  
+  
+  
+        <a class="btn btn-outline-light btn-floating m-1" routerLink="https://angular.io/api/router/RouterLink"  role="button">Contactenos</a>
+      </section>
+    </div>
+  
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright
+    </div>
+  </footer>
