--- a/src/app/layouts/components/navbar/navbar.component.scss
+++ b/src/app/layouts/components/navbar/navbar.component.scss
@@ -5,3 +5,35 @@
 
     background-color: black;
   }
+
+  
+
+.pf1 .a {
+
+  font-family:'Lato', sans-serif;
+  margin-top: 5px;
+  font-size: 20px;
+}
+
+.pf2 {
+
+  font-size: 20px;
+  color: rgb(0, 0, 0);
+  border: 10px;
+  
+
+}
+
+.pf3 {
+
+  color: rgb(0, 0, 0);
+  border: 10px;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+.avatar{
+
+  background-color: black;
+}
