--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -1,7 +1,5 @@
-h2{
-    color:#36A0FF ;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
+button{
+    width: 30%;
 }
 
 body{
@@ -9,4 +7,3 @@ body{
     background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(45,253,219,0.036852240896358524) 100%);
     
 }
-
