--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,35 +1,43 @@
-<h5> registrarse</h5>
-<div class="row">
-    <form  class="example-form" [formGroup]="form" (ngSubmit)="onSubmit()">
-
-        <div class="row">
-            <mat-form-field class="example-full-width">
-                <mat-label>Nombre Completo</mat-label>
-                <input matInput placeholder="" value="" formControlName="fullName">
-                <mat-error>
-                    El Nombre es requerido
-                </mat-error>
-            </mat-form-field>
-        </div>
-        <div class="row">
-            <mat-form-field class="example-full-width">
-                <mat-label>Email</mat-label>
-                <input type = "email" matInput placeholder="" value=""formControlName="email">
-                <mat-error>
-                    El Correo No es Valido
-                </mat-error>
-            </mat-form-field>
-        </div>
-        <div class="row">
-            <mat-form-field class="example-full-width">
-                <mat-label>Password</mat-label>
-                <input matInput placeholder="" value="" type="Password" formControlName="password">
-                <mat-error>
-                    La contraseña es requerida
-                </mat-error>
-            </mat-form-field>
-        </div>
-        <button mat-raised-button color="primary">primary</button>
-    </form>
-
+<body>
+    <h5> Registrarse</h5>
+<div class="container justify-content-center align-items-center">
+    <div class="row">
+        <form class="example-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+    
+            <div class="row">
+                <mat-form-field class="example-full-width">
+                    <mat-label>Nombre Completo</mat-label>
+                    <input matInput placeholder="" value="" formControlName="fullName">
+                    <mat-error>
+                        El Nombre es requerido
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="row">
+                <mat-form-field class="example-full-width">
+                    <mat-label>Email</mat-label>
+                    <input type="email" matInput placeholder="" value="" formControlName="email">
+                    <mat-error>
+                        El Correo No es Valido
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="row">
+                <mat-form-field class="example-full-width">
+                    <mat-label>Password</mat-label>
+                    <input matInput placeholder="" value="" type="Password" formControlName="password">
+                    <mat-error>
+                        La contraseña es requerida
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="d-grid gap-2">
+                <button class="m-auto" mat-raised-button color="primary">Registrar</button>
+            </div>
+    
+        </form>
+    
+    </div>
 </div>
+
+</body>
