--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -1,3 +1,18 @@
 button {
-    width: 100%;
+ width: 70%;
 }
+
+h5{
+    color:#36A0FF ;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 250%;
+    margin-top: 30px;
+    margin-left: 10px;
+    
+}
+
+body{
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(45,253,219,0.036852240896358524) 100%);
+}
+
+
