--- a/src/app/pqrs/pqrs.component.html
+++ b/src/app/pqrs/pqrs.component.html
@@ -12,7 +12,7 @@
                 <div class="row">
                     <mat-form-field class="example-full-width">
                         <mat-label></mat-label>
-                        <input matInput placeholder="" value="" formControlName="nombre">
+                        <input matInput placeholder="" value="" formControlName="Nombre">
                     </mat-form-field>
                 </div>
             </div>
@@ -22,7 +22,7 @@
                 <div class="row">
                     <mat-form-field class="example-full-width">
                         <mat-label></mat-label>
-                        <input matInput placeholder="" value="" formControlName="apellido">
+                        <input matInput placeholder="" value="" formControlName="Apellido">
                     </mat-form-field>
                 </div>
             </div>
@@ -31,7 +31,7 @@
                 <div class="row">
                     <mat-form-field class="example-full-width">
                         <mat-label></mat-label>
-                        <input matInput placeholder="" value="" formControlName="direccion">
+                        <input matInput placeholder="" value="" formControlName="Direccion">
                     </mat-form-field>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 <div class="row">
                     <mat-form-field class="example-full-width">
                         <mat-label></mat-label>
-                        <input matInput placeholder="" value="" formControlName="departamento">
+                        <input matInput placeholder="" value="" formControlName="Departamento">
                     </mat-form-field>
                 </div>
             </div>
@@ -48,7 +48,7 @@
             <div class="form-group">
                 <label class="mb-4">Documento de Identidad * ↓</label>
 
-                <select class="form-control" formControlName="Documento_de_identidad" >
+                <select class="form-control" formControlName="TipoDocIdent" >
                     <option>-Ninguno-</option>
                     <option value="C.C.">C.C.</option>
                     <option value="C.E.">C.E.</option>
@@ -63,7 +63,7 @@
                 <div class="row">
                     <mat-form-field class="example-full-width">
                         <mat-label></mat-label>
-                        <input matInput placeholder="" value="" formControlName="N_doc_identidad">
+                        <input matInput placeholder="" value="" formControlName="DocumentoID">
                     </mat-form-field>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                 <div class="row">
                     <mat-form-field class="example-full-width">
                         <mat-label>Email</mat-label>
-                        <input matInput placeholder="" value="" formControlName="correo_electronico">
+                        <input matInput placeholder="" value="" formControlName="Correo">
                     </mat-form-field>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                 <mat-form-field class="example-full-width">
                     <mat-label></mat-label>
                     <span matPrefix>+57 &nbsp;</span>
-                    <input type="tel" matInput placeholder="123-456 7890" formControlName="Telefono_alternativo">
+                    <input type="tel" matInput placeholder="123-456 7890" formControlName="Telefono">
                     <mat-icon matSuffix></mat-icon>
                 </mat-form-field>
             </div>
@@ -93,7 +93,7 @@
                 <br>
                 <mat-form-field class="example-full-width">
                     <mat-label>comentarios </mat-label>
-                    <textarea matInput placeholder="Escriba su ejemplo aqui" formControlName="descripcion"></textarea>
+                    <textarea matInput placeholder="Escriba su ejemplo aqui" formControlName="Descripcion"></textarea>
                 </mat-form-field>
 
                 <button class="row col" mat-raised-button color="primary">Enviar</button>
