--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,3 @@
-<p>admin works!</p>
 <body>
     <div class="row justify-content-center align-items-center shadow bg-body rounded mx-5">
         <div class=" example-button-row">
@@ -10,7 +9,7 @@
             
             <div class="form-group">
                 <div class="col-md-12 text-center mt-5  mb-5">
-                    <button  mat-raised-button color="primary" (click)="onImprimirContactenos()">Reporte Contactenos</button>
+                    <button  mat-raised-button color="primary" (click)="onImprimirContactenos()">Reporte Contáctenos</button>
                 </div>
             </div>
             
