Enlaces de Hipervinculos

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -18,7 +18,7 @@
 
                 <button mat-raised-button color="primary" (click)="onImprimir()">Imprimir Fórmulas</button>
                 <button mat-raised-button color="primary" (click)="onImprimirContactenos()">Reporte Contactenos</button>
-                <button mat-raised-button color="primary" (click)="onImprimirPQRS()">Reporte Contactenos</button>
+                <button mat-raised-button color="primary" (click)="onImprimirPQRS()">Reporte PQRS</button>
             </mat-grid-tile>
         </mat-grid-list>
 
