--- a/src/app/formulation/formulation.component.html
+++ b/src/app/formulation/formulation.component.html
@@ -1,3 +1,16 @@
+<div class="container justify-content-center shadow-lg">
+
+
+    <mat-grid-list cols="4" rowHeight="100px">
+        <mat-grid-tile class="pf3" colspan="4" rowspan="5">
+
+            <img src="https://images.eyeglasses.com/site/homepage/8-5-22/hero-animation.gif" width="100%" height="100%"
+                alt="">
+
+        </mat-grid-tile>
+
+    </mat-grid-list>
+
 <form class="example-form bd formula" [formGroup]="form" (ngSubmit)="onSubmit()">
 
     <div class="p-3 mb-2 mt-5 bg-light text-dark container-fluid justify-content-center align-items-center d-flex">
@@ -101,3 +114,4 @@
         <button mat-raised-button (click)="onClick()" color="primary" class="aceptar">Aceptar</button>
     </div>
 </section>
+</div>
