--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
   
       <mat-grid-tile colspan="4" rowspan="1" style="background-color: rgb(255, 255, 255);">
   
-        <button style="width:200px; height: 50px; " type="button" class="btn btn-primary"> <a routerLink="" style="color: white; text-decoration: none;">Realiza tu examen</a></button>
+        <button style="width:200px; height: 50px; " type="button" class="btn btn-primary"> <a routerLink="/formulation" style="color: white; text-decoration: none;">Realiza tu examen</a></button>
   
   
       </mat-grid-tile>
