--- a/src/app/layouts/components/footer/footer.component.html
+++ b/src/app/layouts/components/footer/footer.component.html
@@ -4,7 +4,7 @@
       <section class="mb-4">
   
   
-        <a class="btn btn-outline-light btn-floating m-1" routerLink=""  role="button"
+        <a class="btn btn-outline-light btn-floating m-1" routerLink="/contactenos"  role="button"
           >Ubicación</a>
   
         <a class="btn btn-outline-light btn-floating m-1" routerLink=""  role="button"
