--- a/src/app/layouts/components/navbar/navbar.component.html
+++ b/src/app/layouts/components/navbar/navbar.component.html
@@ -11,13 +11,13 @@
   <mat-toolbar style="background-image: url();" >
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     </button>
-    <span><a routerLink="" style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;">Inicio</a></span>
+    <span><a routerLink="/" style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;">Inicio</a></span>
     <span class="example-spacer"></span>
-    <span><a routerLink=""style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;">Ubicación</a></span>
+    <span><a routerLink="contactenos"style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;">Ubicación</a></span>
     <span class="example-spacer"></span>
-    <span><a routerLink=""style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;"> Contacto</a></span>
+    <span><a routerLink="/contactenos"style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;"> Contacto</a></span>
     <span class="example-spacer"></span>
-    <span><a routerLink="" style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;">PQRS</a></span>
+    <span><a routerLink="/pqrs" style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;">PQRS</a></span>
     <span class="example-spacer"></span>
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
     </button>
