--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -12,10 +12,18 @@
                     <button  mat-raised-button color="primary" (click)="onImprimirContactenos()">Reporte Contáctenos</button>
                 </div>
             </div>
+
+            <div class="form-group">
+                <div class="col-md-12 text-center mt-5  mb-5">
+                    <button  mat-raised-button color="primary" (click)="onImprimirPQRS()">Reporte PQRS</button>
+                </div>
+            </div>
             
         </div>
     </div> 
 </body>
+   
+
 
 
 
