--- a/src/app/contactenos/contactenos.component.html
+++ b/src/app/contactenos/contactenos.component.html
@@ -7,67 +7,69 @@
             <div class="col-md-6">
                 <div class="well well-sm">
 
-                        <fieldset>
-                            <legend class="text-center header">Contáctenos</legend>
-                            <form [formGroup]="form" (ngSubmit)="onSubmit()" class="example-contactenos">
-                                <div class="form group">
-                                    <div class="col-md-10 col-md-offset-1">
-                                        <mat-form-field class="example-full-width">
-                                            <mat-label>Nombres</mat-label>                                            
-                                            <input matInput placeholder="Nombres" value="" formControlName="Nombre">
+                    <fieldset>
+                        <legend class="text-center header">Contáctenos</legend>
+                        <form [formGroup]="form" (ngSubmit)="onSubmit()" class="example-contactenos">
+                            <div class="form group">
+                                <div class="col-md-10 col-md-offset-1">
+                                    <mat-form-field class="example-full-width">
+                                        <mat-label>Nombres</mat-label>
+                                        <input matInput placeholder="Nombres" value="" formControlName="Nombre">
 
-                                        </mat-form-field>
-                                    </div>
+                                    </mat-form-field>
                                 </div>
-    
-                                <div class="form group">
-                                    <div class="col-md-10 col-md-offset-1">
-                                        <mat-form-field class="example-full-width">
-                                            <mat-label>Apellidos</mat-label>
-                                            <input matInput placeholder="Apellidos" value="" formControlName="Apellido">
-                                        </mat-form-field>
-                                    </div>
+                            </div>
+
+                            <div class="form group">
+                                <div class="col-md-10 col-md-offset-1">
+                                    <mat-form-field class="example-full-width">
+                                        <mat-label>Apellidos</mat-label>
+                                        <input matInput placeholder="Apellidos" value="" formControlName="Apellido">
+                                    </mat-form-field>
                                 </div>
-    
-                                <div class="form group">
-                                    <div class="col-md-10 col-md-offset-1">
-                                        <mat-form-field class="example-full-width">
-                                            <mat-label>Correo Electrónico</mat-label>
-                                            <input type="email" matInput placeholder="Correo Electrónico" value="" formControlName="Correo">
-                                        </mat-form-field>
-                                    </div>
+                            </div>
+
+                            <div class="form group">
+                                <div class="col-md-10 col-md-offset-1">
+                                    <mat-form-field class="example-full-width">
+                                        <mat-label>Correo Electrónico</mat-label>
+                                        <input type="email" matInput placeholder="Correo Electrónico" value=""
+                                            formControlName="Correo">
+                                    </mat-form-field>
                                 </div>
-    
-                                <div class="form group">
-                                    <div class="col-md-10 col-md-offset-1">
-                                        <mat-form-field class="example-full-width">
-                                            <mat-label>Teléfono</mat-label>
-                                            <input matInput placeholder="Teléfono" value="" formControlName="Telefono">
-                                        </mat-form-field>
-                                    </div>
+                            </div>
+
+                            <div class="form group">
+                                <div class="col-md-10 col-md-offset-1">
+                                    <mat-form-field class="example-full-width">
+                                        <mat-label>Teléfono</mat-label>
+                                        <input matInput placeholder="Teléfono" value="" formControlName="Telefono">
+                                    </mat-form-field>
                                 </div>
-    
-                                <div class="form group">
-                                    <div class="col-md-10 col-md-offset-1">
-                                        
-                                            <mat-form-field class="example-full-width">
-                                                <mat-label>Déjanos tu mensaje</mat-label>
-                                                <textarea matInput
-                                                    placeholder="Nos pondremos en Contacto contigo en un lapso de 2 días hábiles" formControlName="Comentarios"></textarea>
-                                            </mat-form-field>
-                                        
-    
-                                    </div>
+                            </div>
+
+                            <div class="form group">
+                                <div class="col-md-10 col-md-offset-1">
+
+                                    <mat-form-field class="example-full-width">
+                                        <mat-label>Déjanos tu mensaje</mat-label>
+                                        <textarea matInput
+                                            placeholder="Nos pondremos en Contacto contigo en un lapso de 2 días hábiles"
+                                            formControlName="Comentarios"></textarea>
+                                    </mat-form-field>
+
+
                                 </div>
-                                <div class="form-group">
-                                    <div class="col-md-12 text-center">
-                                        <button mat-raised-button color="primary">Enviar</button>
-                                    </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12 text-center">
+                                    <button mat-raised-button color="primary">Enviar</button>
                                 </div>
-                            </form>
-                            
-                        </fieldset>
-                    
+                            </div>
+                        </form>
+
+                    </fieldset>
+
                 </div>
 
             </div>
