--- a/src/app/layouts/components/footer/footer.component.html
+++ b/src/app/layouts/components/footer/footer.component.html
@@ -12,7 +12,7 @@
   
   
   
-        <a class="btn btn-outline-light btn-floating m-1" routerLink="/contactenos"  role="button">Contactenos</a>
+        <a class="btn btn-outline-light btn-floating m-1" routerLink="/contactenos"  role="button">Contáctenos</a>
       </section>
     </div>
   
