--- a/src/app/layouts/components/navbar/navbar.component.html
+++ b/src/app/layouts/components/navbar/navbar.component.html
@@ -15,7 +15,9 @@
     <span class="example-spacer"></span>
     <span><a routerLink="contactenos"style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;">Ubicación</a></span>
     <span class="example-spacer"></span>
-    <span><a routerLink="/contactenos"style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;"> Contacto</a></span>
+    <span><a routerLink="/admin"style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;"> Administrador</a></span>
+    <span class="example-spacer"></span>
+    <span><a routerLink="/contactenos"style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;"> Contáctos</a></span>
     <span class="example-spacer"></span>
     <span><a routerLink="/pqrs" style="text-align: center; font-family: 'Quicksand', sans-serif; text-decoration: double; font-size: 25px; text-decoration: none; color: black;">PQRS</a></span>
     <span class="example-spacer"></span>
